# uniswap-fee-calculation

./: LICENSE  pyproject.toml  setup.py
data/: ARB_GMXWETH_1%_swap.csv  ARB_GMXWETH_1%_swap.txt
src/: feeCalculator.py  getFeeAPR.py
src/Uniswap_Fee_Calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: testFetchData.py  testGetEarnedFee.py  testGetFeeAPR.py  testRaw2CSV.py
